--- a/index.html
+++ b/index.html
@@ -4,32 +4,35 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.sound.min.js"></script>
-<script src="./p5.play.js"></script>
+    <script src="./p5.play.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
     <!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/8.4.2/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.4.2/firebase-database.js"></script>
+
 <script src="js/form.js"></script>
 <script src="js/game.js"></script>
 <script src="js/player.js"></script>
 
+
+<script src="https://www.gstatic.com/firebasejs/8.4.2/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.4.2/firebase-database.js"></script>
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
 
 <script>
   // Your web app's Firebase configuration
   var firebaseConfig = {
-    apiKey: "AIzaSyD17t6IwwUFqy_knpsqsR1RbkzDq_lDR7w",
-    authDomain: "multiplayer-car-racing-g-14d05.firebaseapp.com",
-    databaseURL: "https://multiplayer-car-racing-g-14d05-default-rtdb.firebaseio.com",
-    projectId: "multiplayer-car-racing-g-14d05",
-    storageBucket: "multiplayer-car-racing-g-14d05.appspot.com",
-    messagingSenderId: "1047065597151",
-    appId: "1:1047065597151:web:2bf0aa9d555ce7db2a056a"
+    apiKey: "AIzaSyAycV0jR_OvpJjGQ0ouzk2dg8eS1niemvc",
+    authDomain: "check-22485.firebaseapp.com",
+    databaseURL: "https://check-22485-default-rtdb.firebaseio.com",
+    projectId: "check-22485",
+    storageBucket: "check-22485.appspot.com",
+    messagingSenderId: "964139446589",
+    appId: "1:964139446589:web:375ab09bb2b5fdc98a1554"
   };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
+</script>
 </script>
   </head>
   <body>
